--- a/StorhaugenWebsite/Components/HouseholdSelector.razor
+++ b/StorhaugenWebsite/Components/HouseholdSelector.razor
@@ -60,7 +60,7 @@
 
 @code {
     [CascadingParameter]
-    MudDialogInstance? MudDialog { get; set; }
+    IMudDialogInstance? MudDialog { get; set; }
 
     private string newHouseholdName = "";
     private List<HouseholdInviteDto> pendingInvites = new();
