--- a/StorhaugenWebsite/Pages/FoodDetails.razor
+++ b/StorhaugenWebsite/Pages/FoodDetails.razor
@@ -171,6 +171,7 @@ else
                 {
                     <MudChip Size="Size.Small"
                              Color="Color.Info"
+                             T="string"
                              Icon="@Icons.Material.Rounded.Link"
                              Style="height: 24px;">
                         Linked to @(_food.GlobalRecipeName ?? "Global Recipe")
@@ -183,6 +184,7 @@ else
                 {
                     <MudChip Size="Size.Small"
                              Color="Color.Success"
+                             T="string"
                              Icon="@Icons.Material.Rounded.ContentCopy"
                              Style="height: 24px;">
                         Forked from @(_food.GlobalRecipeName ?? "Global Recipe")
