--- a/StorhaugenWebsite/Pages/Settings.razor
+++ b/StorhaugenWebsite/Pages/Settings.razor
@@ -1,4 +1,5 @@
 ﻿@page "/settings"
+@using StorhaugenWebsite.ApiClient
 @using StorhaugenWebsite.Models
 @using StorhaugenWebsite.DTOs
 @inject IAuthService AuthService
