--- a/StorhaugenWebsite/Pages/Login.razor
+++ b/StorhaugenWebsite/Pages/Login.razor
@@ -1,7 +1,7 @@
 ﻿@page "/login"
 @using StorhaugenWebsite.Services
 @using StorhaugenWebsite.Models
-@inject IAuthService AuthService
+@inject SupabaseAuthService AuthService
 @inject NavigationManager Navigation
 
 <div class="login-container">
